--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 	<body>
 		<div class="main-container">
+
 			<div id="overlay" class="start">
-				<img src="https://i.imgur.com/Gt6J7MQ.png" align ="center" width="500" alt="Rupaul" >
+				<img src="https://i.imgur.com/Gt6J7MQ.png" class="main-image" width="500" alt="Rupaul" referrerpolicy="no-referrer">
 				<h2 class="title">Phrase Hunty!</h2>
 				<h1 id="game-over-message"></h1>
 				<button id="btn__reset">Get to werk!</button>
@@ -21,7 +22,7 @@
 
 			<div id="banner" class="section">
 				<h2 class="header">Phrase Hunty!</h2>
-				<img src="https://i.imgur.com/4L51pnO.png" width= "100" alt="Rupaul">
+				<img src="https://i.imgur.com/4L51pnO.png" width= "100" alt="Rupaul" referrerpolicy="no-referrer">
 			</div>
 
 			<div id="phrase" class="section">
